# 2024AiDevToolsTest

./: pyproject.toml  requirements.txt  run_test.py
hw_tester/: conftest.py  settings.py
hw_tester/services/: app_finder.py
hw_tester/tests/: test_base_api.py  test_middle_api.py  test_pro_api.py
